app/assets/stylesheets/layout.css
html, body {
  height: 100%;
}
body {
  overflow: hidden;
}

.notes {
  height: 100%;
}

.main-view, .status-bar {
  margin-left: 60px;
}
.main-view.fullscreen, .status-bar.fullscreen {
  margin-left: 0px;
}

.status-bar {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 5;
}

div.modal {
  position: fixed;
  background: rgba(0, 0, 0, 0.4);

  text-align: center;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;

}

div.modal div {
  position: fixed;
  width: 300px;
  left: calc(50% - 150px);
  top: 100px;
  border-radius: 15px;
  box-shadow: 3px 3px 10px gray;
  background-color: white;
  z-index: 5;
}

div.modal button{
  margin: 8px;
}

